src/qt_binding.rs

/* automatically generated by rust-bindgen 0.69.5 */

pub type callback = ::std::option::Option<
    unsafe extern "C" fn(
        cb_ptr: *mut ::std::os::raw::c_void,
        cb_type: isize,
        arg1: isize,
        arg2: isize,
        arg3: isize,
    ),
>;
pub const CB_LAYOUT_INIT: isize = 1;
pub const CB_LAYOUT_NEXT: isize = 2;
pub const CB_LAYOUT_PREV: isize = 3;
pub const CB_LAYOUT_JUMP: isize = 4;
pub const CB_SCREENSHOT: isize = 5;
extern "C" {
    pub fn setup(
        base_uri: *const ::std::os::raw::c_char,
        inspect: ::std::os::raw::c_int,
        debug: ::std::os::raw::c_int,
        cb: callback,
        cb_ptr: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn run();
}
extern "C" {
    pub fn navigate(file: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn screenshot();
}
extern "C" {
    pub fn set_title(title: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn set_size(
        pos_x: ::std::os::raw::c_int,
        pos_y: ::std::os::raw::c_int,
        size_x: ::std::os::raw::c_int,
        size_y: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn run_js(js: *const ::std::os::raw::c_char);
}
